--- a/source/assets/stylesheets/modules/landing_page.css.sass
+++ b/source/assets/stylesheets/modules/landing_page.css.sass
@@ -39,23 +39,23 @@ header
 
   &:before,
   &:after
+    right: 0
+    width: 105%
     z-index: 1
 
   &:before
     @media (min-width: 670px)
       width: 105%
-      height: 134%
+      height: 135%
       background: #003a99
       opacity: .11
-      right: 0
 
   &:after
     @media (min-width: 670px)
-      width: 106%
-      height: 133%
+      width: 105%
+      height: 132%
       background: #994400
       opacity: .11
-      right: -2%
 
   .hero-radial
     padding: 7rem 0 2.5rem
